// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа Filtration 1`] = `
<div
  className="MobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <br />
  <br />
  <table
    className="MobileCompanyClients"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MobileClient"
        id={1}
      >
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={2}
      >
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={3}
      >
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={4}
      >
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="StatusBlocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <br />
</div>
`;

exports[`работа Filtration 2`] = `
<div
  className="MobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <br />
  <br />
  <table
    className="MobileCompanyClients"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MobileClient"
        id={1}
      >
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={2}
      >
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={3}
      >
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <br />
</div>
`;

exports[`работа Filtration 3`] = `
<div
  className="MobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <br />
  <br />
  <table
    className="MobileCompanyClients"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MobileClient"
        id={1}
      >
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={2}
      >
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={3}
      >
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="StatusActive"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
        id={4}
      >
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="StatusBlocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <br />
</div>
`;

exports[`работа Filtration 4`] = `
<div
  className="MobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <br />
  <br />
  <table
    className="MobileCompanyClients"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="MobileClient"
        id={4}
      >
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="StatusBlocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <br />
</div>
`;
